bug fix in admin panel

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -102,7 +102,7 @@
                 </td>
                 <td>
                     <ul>
-                        <% for(var m=0; m< pricesArray[i].length; m++){ %>
+                        <% for(var m=0; m< datesArray[i].length; m++){ %>
                         <li class="card-text">
                             <small class="text-muted"><%= datesArray[i][m] %></small>
                         </li>
