--- a/public/CSS/admin.css
+++ b/public/CSS/admin.css
@@ -11,5 +11,6 @@
 }
 
 body {
-  background-color: rgb(247, 221, 225);
+  background-color: #eec0c6;
+  background-image: linear-gradient(315deg, #eec0c6 0%, #7ee8fa 74%);
 }
