--- a/public/CSS/login.css
+++ b/public/CSS/login.css
@@ -71,3 +71,14 @@ body {
 .round-button {
   border-radius: 8px;
 }
+
+.bg-grad {
+  /* background-color: #f8f9d2;
+  background-image: linear-gradient(315deg, #f8f9d2 0%, #e8dbfc 74%); */
+  /* background-color: #aff6cf;
+  background-image: linear-gradient(315deg, #aff6cf 0%, #9f98e8 74%); */
+  /* background-color: #deebdd;
+  background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%); */
+  background-color: #ffffff;
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
+}
