--- a/public/CSS/tour-list.css
+++ b/public/CSS/tour-list.css
@@ -1,5 +1,12 @@
 .main {
-  background-color: rgb(253, 253, 105);
+  /* background-color: #f9484a;
+  background-image: linear-gradient(315deg, #f9484a 0%, #fbd72b 74%); */
+  /* background-color: #f6d327;
+  background-image: linear-gradient(315deg, #f6d327 0%, #de4daa 74%); */
+  /* background-color: #90d5ec;
+  background-image: linear-gradient(315deg, #90d5ec 0%, #fc575e 74%); */
+  background-color: #aff6cf;
+  background-image: linear-gradient(315deg, #aff6cf 0%, #9f98e8 74%);
 }
 
 .navbar-brand {
@@ -60,7 +67,8 @@ section .section-title {
   margin-top: -10px;
 }
 
-#footer ul.social li a, #footer ul.quick-links li a {
+#footer ul.social li a,
+#footer ul.quick-links li a {
   color: #ffffff;
 }
 
