--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,135 +1,216 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Login</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="CSS/login.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="CSS/login.css" />
+  </head>
 
-
-<body data-vide-bg="Media/ocean">
+  <body data-vide-bg="Media/ocean">
     <div class="login-form">
-        <div class=".text-center">
-        <div class="card" style="width: 25rem;">
-            <div class="card-header text-center">
-                <nav>
-                    <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                        <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home"
-                            role="tab" aria-controls="nav-home" aria-selected="true">Sign-in</a>
-                        <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
-                            role="tab" aria-controls="nav-profile" aria-selected="false">Register</a>
+      <div class=".text-center">
+        <div class="card bg-grad" style="width: 25rem;">
+          <div class="card-header text-center">
+            <nav>
+              <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
+                <a
+                  class="nav-item nav-link active"
+                  id="nav-home-tab"
+                  data-toggle="tab"
+                  href="#nav-home"
+                  role="tab"
+                  aria-controls="nav-home"
+                  aria-selected="true"
+                  >Sign-in</a
+                >
+                <a
+                  class="nav-item nav-link"
+                  id="nav-profile-tab"
+                  data-toggle="tab"
+                  href="#nav-profile"
+                  role="tab"
+                  aria-controls="nav-profile"
+                  aria-selected="false"
+                  >Register</a
+                >
+              </div>
+            </nav>
+          </div>
+          <div class="card-body text-center">
+            <div class="tab-content" id="nav-tabContent">
+              <div
+                class="tab-pane fade show active"
+                id="nav-home"
+                role="tabpanel"
+                aria-labelledby="nav-home-tab"
+              >
+                <form action="/login" method="POST">
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <input
+                          type="email"
+                          name="email"
+                          class="form-control"
+                          aria-describedby="emailHelp"
+                          placeholder="Enter email"
+                        />
+                        <small id="emailHelp" class="form-text text-muted"
+                          >We'll never share your email with anyone else.</small
+                        >
+                      </div>
                     </div>
-                </nav>
-            </div>
-            <div class="card-body text-center">
-                <div class="tab-content" id="nav-tabContent">
-                    <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
-                        <form action="/login" method="POST">
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="email" name="email" class="form-control"
-                                            aria-describedby="emailHelp" placeholder="Enter email">
-                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email
-                                            with
-                                            anyone
-                                            else.</small>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="password" name="password" class="form-control"
-                                            placeholder="Password">
-                                        <% if(wrongPassword){ %>
-                                        <small class="form-text text-danger">Wrong Password! Try again.</small>
-                                        <% } %>
-                                        <% if(wrongEmail){ %>
-                                        <small class="form-text text-danger">Incorrect Email Id! Try again or
-                                            Register.</small>
-                                        <% } %>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-info btn-block round-button">Login</button>
-                            </div>
-                        </form>
+                  </div>
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <input
+                          type="password"
+                          name="password"
+                          class="form-control"
+                          placeholder="Password"
+                        />
+                        <% if(wrongPassword){ %>
+                        <small class="form-text text-danger"
+                          >Wrong Password! Try again.</small
+                        >
+                        <% } %> <% if(wrongEmail){ %>
+                        <small class="form-text text-danger"
+                          >Incorrect Email Id! Try again or Register.</small
+                        >
+                        <% } %>
+                      </div>
                     </div>
-                    <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-                        <form action="/register" method="post" autocomplete="off">
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="mail" class="form-control" placeholder="Email"
-                                            name="user[email_id]" value="" required>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="text" class="form-control" placeholder="First Name"
-                                            name="user[fname]" value="" required>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="text" class="form-control" placeholder="Last Name"
-                                            name="user[lname]" value="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="row">
-                                    <div class="col">
-                                        <input type="password" class="form-control" placeholder="Password"
-                                            name="user[password]" value="">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="text-center">
-                                <button type="submit" class="btn btn-info btn-block round-button">Register</button>
-                            </div>
-                        </form>
+                  </div>
+                  <div class="text-center">
+                    <button
+                      type="submit"
+                      class="btn btn-info btn-block round-button"
+                    >
+                      Login
+                    </button>
+                  </div>
+                </form>
+              </div>
+              <div
+                class="tab-pane fade"
+                id="nav-profile"
+                role="tabpanel"
+                aria-labelledby="nav-profile-tab"
+              >
+                <form action="/register" method="post" autocomplete="off">
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <input
+                          type="mail"
+                          class="form-control"
+                          placeholder="Email"
+                          name="user[email_id]"
+                          value=""
+                          required
+                        />
+                      </div>
                     </div>
-                </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="First Name"
+                          name="user[fname]"
+                          value=""
+                          required
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <input
+                          type="text"
+                          class="form-control"
+                          placeholder="Last Name"
+                          name="user[lname]"
+                          value=""
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col">
+                        <input
+                          type="password"
+                          class="form-control"
+                          placeholder="Password"
+                          name="user[password]"
+                          value=""
+                        />
+                      </div>
+                    </div>
+                  </div>
+                  <div class="text-center">
+                    <button
+                      type="submit"
+                      class="btn btn-info btn-block round-button"
+                    >
+                      Register
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
-            <div class="card-footer text-center">
-                <div class="alert alert-dark">
-                    <a style="text-decoration: none" class="alert-link" href="/">Go to home</a>
-                </div>
+          </div>
+          <div class="card-footer text-center">
+            <div class="alert alert-dark">
+              <a style="text-decoration: none" class="alert-link" href="/"
+                >Go to home</a
+              >
             </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
     <!-- Optional JavaScript -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="JS/jquery.vide.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
