--- a/public/CSS/contact_us.css
+++ b/public/CSS/contact_us.css
@@ -15,6 +15,7 @@ body {
 
 .w3-container {
   border-radius: 25px;
+  width: 300px;
   margin-top: 50px;
   margin-right: 1200px;
   background-color: rgb(247, 228, 176);
